@@ -1,12 +1,12 @@
-VERSION
+VERSION::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
-0.0.1.7
+0.0.1.8
 
-AUTHORS
+AUTHORS::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 Kostya Zolotarov <kostya.zolotarov@gmail.com>
 
-BACKGROUND
+BACKGROUND:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 I need a tool to automate creation and maintenance of source code modules.
 Invoked from command line, such tool would produce a source code module.
@@ -15,12 +15,12 @@ files. The boilerplate files would describe the source code module and define
 its format and structure. Example boilerplate files could be - README, INSTALL,
 CHANGELOG, VERSION, etc.
 
-DESCRIPTION
+DESCRIPTION::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 Command-line utility for automated creation and maintenance of source code
 modules.
 
-SOURCES
+SOURCES::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 Source code can be obtained on GitHub (https://github.com/kz9676/srcmod).
 
@@ -38,34 +38,34 @@ production defects. Supporting branches may include the following:
     * Release branches
     * Hotfix branches
 
-FILES
+FILES::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 .
-├── [kostya.zolotarov          46 Jun 30 13:57]  ./AUTHORS
+├── [kostya.zolotarov          46 Jun 30 15:24]  ./AUTHORS
 ├── [kostya.zolotarov        1395 Jun 30 13:29]  ./authors
 ├── [kostya.zolotarov         406 Jun 23 15:18]  ./BACKGROUND
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./BUILD
 ├── [kostya.zolotarov        1434 Jun 30 13:28]  ./build
-├── [kostya.zolotarov        3947 Jun 30 13:57]  ./CHANGELOG
+├── [kostya.zolotarov        4027 Jun 30 15:24]  ./CHANGELOG
 ├── [kostya.zolotarov        1431 Jun 30 13:57]  ./changelog
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./DEFECTS
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./DEPENDENCIES
 ├── [kostya.zolotarov          84 Jun 23 15:54]  ./DESCRIPTION
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./DESIGN
 ├── [kostya.zolotarov           0 Jun 23 15:20]  ./FEATURES
-├── [kostya.zolotarov           0 Jun 30 13:57]  ./FILES
+├── [kostya.zolotarov           0 Jun 30 15:24]  ./FILES
 ├── [kostya.zolotarov        1315 Jun 29 17:02]  ./files
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./INSTALL
 ├── [kostya.zolotarov        1942 Jun 30 13:28]  ./install
-├── [kostya.zolotarov        1308 Jun 29 16:06]  ./library.logging.sh
+├── [kostya.zolotarov        1473 Jun 30 15:22]  ./library.logging.sh
 ├── [kostya.zolotarov        1083 Jun 23 15:18]  ./LICENSE
-├── [kostya.zolotarov        8124 Jun 30 13:38]  ./README
-├── [kostya.zolotarov        1869 Jun 30 13:20]  ./readme
+├── [kostya.zolotarov        9445 Jun 30 15:23]  ./README
+├── [kostya.zolotarov        1890 Jun 30 15:19]  ./readme
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./REQUIREMENTS
 ├── [kostya.zolotarov         999 Jun 30 13:20]  ./settings.srcmod
 ├── [kostya.zolotarov        1760 Jun 30 13:30]  ./setup
 ├── [kostya.zolotarov         617 Jun 23 16:01]  ./SOURCES
-├── [kostya.zolotarov          74 Jun 30 13:38]  ./TASKS
+├── [kostya.zolotarov          74 Jun 30 13:57]  ./TASKS
 ├── [kostya.zolotarov        2849 Jun 30 13:35]  ./tasks
 ├── [kostya.zolotarov           0 Jun 13 13:40]  ./template.bash
 ├── [kostya.zolotarov           0 Jun 13 13:40]  ./template.c
@@ -75,22 +75,27 @@ FILES
 ├── [kostya.zolotarov           0 Jun 13 13:40]  ./template.ruby
 ├── [kostya.zolotarov           0 Jun 23 15:18]  ./TEST
 ├── [kostya.zolotarov        2081 Jun 30 13:31]  ./uninstall
-├── [kostya.zolotarov           8 Jun 30 13:38]  ./VERSION
+├── [kostya.zolotarov           8 Jun 30 13:57]  ./VERSION
 └── [kostya.zolotarov        2200 Jun 30 13:31]  ./version
 
 0 directories, 36 files
 
-TASKS
+TASKS::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 ./authors # TODO - Add verbose output
 ./files # TODO - Add verbose output
 
-CHANGELOG
+CHANGELOG::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
+* bbe4da9 
+|  2015-06-30 
+|  Kostya Zolotarov 
+|  New changelog formatting (HEAD, origin/development, origin/HEAD, development) 
+|  
 * 65affcb 
 |  2015-06-30 
 |  Kostya Zolotarov 
-|  Implemented reading tasks command configuration settings from ~/.srcmod (HEAD, origin/development, origin/HEAD, development) 
+|  Implemented reading tasks command configuration settings from ~/.srcmod 
 |  
 * 556144a 
 |  2015-06-30 
@@ -297,7 +302,7 @@ CHANGELOG
    Kostya Zolotarov 
    Initialized repository 
 
-LICENSE
+LICENSE::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 The MIT License (MIT)
 
